add text to each sub page as a non permanent guide for me till I finalize the project

--- a/hotels_and_villas.html
+++ b/hotels_and_villas.html
@@ -53,6 +53,7 @@
             <div class="col-md-6 col-md-4 col-md-2 hero-image">
                     <div class="p-5 mb-3 bg-white md-white sm-white text-dark">
                         <div class="storyteller-moto2">
+                            <p>Hotels & Villas Page</p>
                             <p>"Logo / Hero Image goes here"</p>
                         </div>
                     </div>
