--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
             <div class="col-md-6 col-md-4 col-md-2 hero-image">
                     <div class="p-5 mb-3 bg-white md-white sm-white text-dark">
                         <div class="storyteller-moto2">
+                            <p>Home Page</p>
                             <p>"Logo / Hero Image goes here"</p>
                         </div>
                     </div>
